[package]
name = "zero-sum-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0" # The game engine
rand = "0.9.1"  # For RNG

[profile.dev]
opt-level = 1     # Speeds up compilation while keeping debug assertions
codegen-units = 8 # Number of my physical CPU cores

[profile.dev.package."*"]
opt-level = 3 # To compile dependencies with all optimizations

[profile.release]
opt-level = 3
codegen-units = 1   # To compile the entire code as one unit for the best possible optimisation
strip = "debuginfo" # To minisise memory usage
