[package]
name = "zero-sum-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
rand = "0.9.1"

[profile.dev]
panic = "unwind"
opt-level = 0
debug = true
strip = "none"
lto = false
codegen-units = 16
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
